# samantha-public

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
config/: README.md  models.yaml  server.yaml  settings.yaml
data/: README.md  step_classifications.json
docs/: README.md
knowledge_base/: workflow_states.md  workflow_states.yaml
scenarios/: README.md
schemas/: scenario.schema.json
scripts/: README.md  analyze_tiered_routing.py  benchmark_coder_generations.sh  benchmark_models.py  benchmark_ollama_vs_llamacpp.sh  benchmark_quantization.py  build_rag_index.sh  chat_scenario.py  classify_steps.py  download_models.sh  generate_accessioning_scenarios.py  generate_rag_comparison.sh  generate_scenario_docs.py  inspect_scenario.py  regenerate_summary.py  run_coder_vs_70b.sh  run_coder_vs_70b_quick.sh  run_new_scenarios.sh  run_phase1_70b.sh  run_phase1_clean.sh  run_phase1_remaining.sh  run_phase1_screen.sh  run_phase2_variance.sh  run_phase3a.sh  run_phase3b.sh  run_query_baseline.sh  run_query_rag.sh  run_query_tool_use.sh  run_routing_baseline.sh  run_routing_rag.sh  run_skill_vs_baseline.sh  scenario_sets.sh  seed_demo_data.sh  smoke_test_models.sh  start_server.sh  test_connectors.py
tests/: conftest.py  test_accumulated_state_scenarios.py  test_api_server.py  test_chat_adapters.py  test_chat_service.py  test_combined_analysis.py  test_coverage_report.py  test_dashboard.py  test_database.py  test_evaluation_analysis.py  test_evaluation_harness.py  test_evaluation_metrics.py  test_evaluation_reporter.py  test_max_workers.py  (+47 more)
(+313 files in other folders)
